# Socket

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Changelog.md  Config.cmake.in  LICENSE  README.md  Socket.sln  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: android-ci.yml  cmake.yml  codeql.yml  msbuild.yml
Socket/: Socket.vcxproj  Socket.vcxproj.filters
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  SocketAndroid.cpp
android/app/src/main/java/com/sdk/socket/: MainActivity.java  Utils.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
application/client/: CMakeLists.txt  Client.cpp  Client.h  SSLClient.cpp  SSLClient.h
application/server/: CMakeLists.txt  SSLServer.cpp  SSLServer.h  Server.cpp  Server.h
examples/: CMakeLists.txt  Client.cpp  Client.h  SecureClient.cpp  SecureClient.h  SecureServer.cpp  SecureServer.h  Server.cpp  Server.h  SocketExample.cpp  pcout.cpp  pcout.h
examples/client/: CMakeLists.txt  ClientApp.cpp  SSLClientApp.cpp
examples/server/: CMakeLists.txt  SSLServerApp.cpp  ServerApp.cpp
general/: BaseException.cpp  BaseException.h  CMakeLists.txt  ExceptionExport.h  SocketException.cpp  SocketException.h
msvc/: Socket.sln  Socket.vcxproj  Socket.vcxproj.filters
network/: CMakeLists.txt  SSLSocket.cpp  SSLSocket.h  SSLSocketDescriptor.cpp  SSLSocketDescriptor.h  SecureSocket.cpp  SecureSocket.h  SecureSocketObject.cpp  SecureSocketObject.h  Socket.cpp  Socket.h  SocketDescriptor.cpp  SocketDescriptor.h  SocketException.cpp  SocketException.h  SocketExport.h  SocketObject.cpp  SocketObject.h  SocketOption.cpp  SocketOption.h  version.h  version.h.in
test/: CMakeLists.txt  SocketTest.cpp
